# mae-brand-namer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_TEST_LLM.md  Supabase Snippet Retrieve Tables and Columns Info (4).csv  agents.yaml  app.py  brand_name_generator_schema.csv  error_handling_template.md  flake8_output.txt  indentation_fix.txt  langgraph.json  pyproject.toml  report_formatter.py.backup  requirements.txt  semantic_test.py  streamlit_app.py  tasks.yaml  test_fixes.py  test_llm_call.py  test_workflow.py  zzbrand_name_creation_expert.py
.cursor/rules/: langgraph.mdc
.github/workflows/: python-publish.yml  python-test.yml  security-scan.yml
.streamlit/: config.toml
docs/: brand_name_generation.md  import_style_guide.md  langgraph_callbacks.md  notesforformatter.md  seo_online_discovery.md  style_guide.md  survey_simulation.md  translation_analysis.md
examples/: callback_example.py
src/mae_brand_namer/: __init__.py  cli.py  server.py
src/mae_brand_namer/agents/: __init__.py  arabic_translation_expert.py  base_language_expert.py  brand_context_expert.py  brand_name_creation_expert.py  brand_name_evaluator.py  chinese_translation_expert.py  competitor_analysis_expert.py  cultural_sensitivity_expert.py  domain_analysis_expert.py  french_translation_expert.py  german_translation_expert.py  japanese_translation_expert.py  language_expert_factory.py  linguistic_analysis_expert.py  market_research_expert.py  process_supervisor.py  report_compilation_expert.py  report_compiler.py  report_formatter.py  report_raw_data_rows.sql  report_storer.py  semantic_analysis_expert.py  seo_online_discovery_expert.py  spanish_translation_expert.py  survey_simulation_expert.py  translation_analysis_expert.py  uid_generator.py
src/mae_brand_namer/agents/prompts/brand_context/: extraction.yaml  system.yaml
src/mae_brand_namer/agents/prompts/brand_name_evaluator/: evaluation.yaml  system.yaml
src/mae_brand_namer/agents/prompts/brand_name_generator/: generation.yaml  system.yaml
src/mae_brand_namer/agents/prompts/competitor_analysis/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/cultural_sensitivity/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/domain_analysis/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/language_experts/arabic/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/language_experts/chinese/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/language_experts/french/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/language_experts/german/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/language_experts/japanese/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/language_experts/spanish/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/linguistics/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/market_research/: research.yaml  system.yaml
src/mae_brand_namer/agents/prompts/report_compiler/: compilation.yaml  system.yaml
src/mae_brand_namer/agents/prompts/report_compiler/templates/: README.md  brand_context.json  brand_name_evaluation.json  brand_name_generation.json  competitor_analysis.json  cultural_sensitivity_analysis.json  domain_analysis.json  linguistic_analysis.json  market_research.json  semantic_analysis.json  seo_online_discoverability.json  survey_simulation.json  translation_analysis.json
src/mae_brand_namer/agents/prompts/report_formatter/: __init__.py  brand_context.yaml  brand_name_evaluation.yaml  brand_name_generation.yaml  competitor_analysis.yaml  cultural_sensitivity.yaml  cultural_sensitivity_analysis.yaml  domain_analysis.yaml  executive_summary.yaml  format_section.yaml  linguistic_analysis.yaml  market_research.yaml  recommendations.yaml  section_template.yaml  semantic_analysis.yaml  seo_analysis.yaml  shortlisted_names_summary.yaml  survey_simulation.yaml  system.yaml  table_of_contents.yaml  title_page.yaml  translation_analysis.yaml
src/mae_brand_namer/agents/prompts/semantic_analysis/: human.yaml  system.yaml
src/mae_brand_namer/agents/prompts/seo_discovery/: analysis.yaml  system.yaml
src/mae_brand_namer/agents/prompts/survey_simulation/: simulation.yaml  single_persona.yaml  system.yaml
src/mae_brand_namer/agents/prompts/translation_analysis/: analysis.yaml  system.yaml
src/mae_brand_namer/config/: __init__.py  dependencies.py  settings.py
src/mae_brand_namer/models/: __init__.py  app_config.py  common.py  report_sections.py  state.py
src/mae_brand_namer/models/report_sections/: __init__.py  brand_context.py  brand_name.py  brand_name_evaluation.py  competitor_analysis.py  cultural_sensitivity_analysis.py  domain_analysis.py  linguistic_analysis.py  market_research.py  name_category.py  name_generation_section.py  semantic_analysis.py  seo_online_discoverability.py  survey_simulation.py  table_of_contents_section.py  translation_analysis.py
src/mae_brand_namer/patches/: __init__.py  langchain_google_genai_patch.py
src/mae_brand_namer/templates/: report_template.md
src/mae_brand_namer/utils/: __init__.py  agent_helpers.py  embeddings.py  json_parser.py  logging.py  rate_limiter.py  state_utils.py  supabase_utils.py  supabaseold.py  template_utils.py
src/mae_brand_namer/workflows/: __init__.py  brand_naming.py  zzbrand_naming.py
supabase/migrations/: 20240321000000_create_process_logs.sql  20240626000000_add_error_details.sql
