[project]
name = "mae-brand-namer"
version = "0.1.0"
description = "A LangGraph-powered brand name generation and evaluation system using multiple expert agents"
authors = [
    {name = "Mae Brand Namer Team", email = "team@maebrandnamer.ai"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["branding", "nlp", "ai", "langgraph", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain>=0.3.20",
    "langgraph>=0.3.5",
    "langchain-core>=0.3.41",
    "langchain-google-genai>=0.0.11",
    "google-generativeai>=0.4.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.13.0",
    "python-dotenv>=1.0.0",
    "uuid>=1.30",
    "typing-extensions>=4.9.0",
    "python-dateutil>=2.9.0",
    "jsonschema>=4.21.0",
    "langsmith>=0.1.147",
    "langchain-experimental>=0.0.51",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "aiohttp>=3.9.1",
    "asyncio>=3.4.3",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "python-docx>=1.0.1",
    "boto3>=1.26.0",
    "markdown>=3.4.0",
    "postgrest>=0.10.6",
    "storage3>=0.5.2",
    "gotrue>=1.0.1",
]
requires-python = ">=3.11"

[project.scripts]
mae-brand-namer = "mae_brand_namer.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = [
    "pydantic.mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"] 