[tool.poetry]
name = "mae-brand-namer"
version = "0.1.0"
description = "A LangGraph-powered brand name generation and evaluation system using multiple expert agents"
authors = ["Mae Brand Namer Team <devin.bartley18@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["branding", "nlp", "ai", "langgraph", "langchain"]
packages = [
    { include = "mae_brand_namer", from = "src" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
google-genai = ">=1.5.0"
langchain = ">=0.1.0"
langgraph = ">=0.0.1"
langchain-core = ">=0.1.0"
langchain-google-genai = ">=2.1.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
supabase = ">=2.13.0"
python-dotenv = ">=1.0.0"
uuid = ">=1.30"
typing-extensions = ">=4.9.0"
python-dateutil = ">=2.9.0"
jsonschema = ">=4.21.0"
langsmith = ">=0.1.147"
langchain-experimental = ">=0.0.51"
structlog = ">=24.1.0"
tenacity = ">=8.2.3"
aiohttp = ">=3.9.1"
asyncio = ">=3.4.3"
pyyaml = ">=6.0.1"
jinja2 = ">=3.1.0"
click = ">=8.1.0"
python-docx = ">=1.0.1"
boto3 = ">=1.26.0"
markdown = ">=3.4.0"
postgrest = ">=0.10.6"
storage3 = ">=0.5.2"
gotrue = ">=1.0.1"
requests = "^2.32.3"
langgraph-api = "^0.0.32"
fastapi = "^0.115.11"
starlette = "^0.46.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.23.5"
pytest-cov = ">=4.1.0"
black = ">=22.0"
isort = ">=5.0"
mypy = ">=1.0"
ruff = ">=0.2.1"

[tool.poetry.scripts]
mae-brand-namer = "mae_brand_namer.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = [
    "pydantic.mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"] 